@@ -1,7 +1,6 @@
 package org.kosit.xvrl.api;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.kosit.xvrl.model.XVRLReport;
 import org.kosit.xvrl.model.XVRLReportSummary;
@@ -13,6 +12,6 @@ public interface BaseReportSummary {
     List<XVRLReportSummary> getReportSummaries();
 
     default List<String> getAllErrors() {
-        return getReports().stream().flatMap(xvrlReport -> xvrlReport.getAllErrors().stream()).collect(Collectors.toList());
+        return getReports().stream().flatMap(xvrlReport -> xvrlReport.getAllErrors().stream()).toList();
     }
 }
